tests/errors/array_fill_runtime_length.orus
fn main() {
    let n: i32 = 4
    let arr = [0; n]
    print(len(arr))
}
